# nuntius

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  nuntius.pen  package.json
.github/workflows/: build-binaries.yml
client/: Cargo.toml
client/api/: openapi.yaml
client/frontend/: README.md  index.html  package.json  vite.config.ts
client/frontend/src/: App.tsx  api.ts  archiveOutbox.ts  components.tsx  events.ts  hooks.ts  main.tsx  stores.ts
client/frontend/src/pages/: Approvals.tsx  Overview.tsx  Project.tsx  Projects.tsx  Thread.tsx  Threads.tsx
client/frontend/src/sheets/: DirectoryPicker.tsx  NewThreadSheet.tsx
client/migrations/: 0001_initial.sql  0002_app_server_identity.sql  0003_runtime_hardening.sql  0004_command_scheduler.sql  0005_app_thread_recovery.sql  0006_project_deletion.sql  0007_frontend_recovery.sql  0008_image_attachments.sql  0009_agent_providers.sql  0010_thread_chronology.sql  0011_pi_provider_constraints.sql  0012_turn_access_mode.sql  0014_thread_review_state.sql
client/src/: agent.rs  agent_host.rs  api.rs  app_server.rs  assets.rs  attachments.rs  command_queue.rs  config.rs  directory.rs  error.rs  executor.rs  history_monitor.rs  kimi.rs  main.rs  pairing.rs  pi.rs  probe.rs  protocol.rs  provider_usage.rs  runtime_reconciler.rs  service.rs  store.rs  tunnel.rs  update_relay.rs
docs/: implementation-status.md  prd.md  tech.md
docs/design/: README.md  contracts.md
docs/design/00-system-foundation/: functional.md  technical.md
docs/design/01-identity-access/: functional.md  technical.md
docs/design/02-device-management/: functional.md  technical.md
docs/design/03-agent-runtime/: functional.md  technical.md
docs/design/04-app-server-adapter/: functional.md  technical.md
docs/design/05-project-management/: functional.md  technical.md
docs/design/06-thread-management/: functional.md  technical.md
docs/design/07-turn-messaging/: functional.md  technical.md
docs/design/08-approval/: functional.md  technical.md
docs/design/09-browser-api/: functional.md  technical.md
docs/design/10-browser-events/: functional.md  technical.md
docs/design/11-device-tunnel/: functional.md  technical.md
docs/design/12-reliable-messaging/: functional.md  technical.md
ops/: Cargo.toml
ops/docker/: server-builder.Dockerfile
ops/src/: main.rs
scripts/: check-version-alignment.mjs  install-local-client.py  install-local-release-agent.sh  local-release.sh  relay-server-update.py  uninstall-local-release-agent.sh
server/: Cargo.toml
server/api/: openapi.yaml
server/frontend/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
server/migrations/: 0001_initial.sql  0002_approvals.sql  0003_reliability_hardening.sql  0004_command_queue_epoch.sql  0005_project_deletion.sql  0006_image_attachments.sql  0007_agent_providers.sql  0008_thread_chronology.sql  0009_thread_created_at.sql  0010_pi_provider_constraints.sql  0011_sync_contention.sql  0012_provider_usage.sql  0013_thread_display_titles.sql  0015_saved_items.sql
server/src/: api.rs  assets.rs  attachments.rs  auth.rs  config.rs  error.rs  event_hub.rs  main.rs  protocol.rs  releases.rs  store.rs  tunnel.rs  update_relay.rs
shared/: package.json  tsconfig.json
shared/src/: access.ts  agent-config.ts  format.test.ts  format.ts  index.ts  stream.ts  types.ts
updater/: Cargo.toml
updater/src/: lib.rs
(+78 files in other folders)
