[workspace]
members = [
    "client",
    "server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.90"

[workspace.dependencies]
anyhow = "1.0"
argon2 = "0.5"
async-stream = "0.3"
axum = { version = "0.8", features = ["macros", "ws"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
directories = "6.0"
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
futures-util = "0.3"
fs2 = "0.4"
hex = "0.4"
http = "1.3"
libc = "0.2"
mime_guess = "2.0"
nix = { version = "0.30", features = ["signal", "process"] }
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
rust-embed = "8.11"
schemars = { version = "1.0", features = ["uuid1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite", "migrate", "uuid", "json"] }
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.48", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
toml = "0.9"
tower-http = { version = "0.6", features = ["catch-panic", "limit", "request-id", "trace"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2.5"
uuid = { version = "1.18", features = ["v4", "v7", "serde"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
