[package]
name = "nuntius-client"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "nuntius-client"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
base64.workspace = true
clap.workspace = true
directories.workspace = true
ed25519-dalek.workspace = true
futures-util.workspace = true
fs2.workspace = true
hex.workspace = true
libc.workspace = true
mime_guess.workspace = true
nix.workspace = true
rand.workspace = true
reqwest.workspace = true
rust-embed.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-tungstenite.workspace = true
toml.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.23"
