[package]
name = "nuntius-ops"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "nuntius-ops"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
directories.workspace = true
fs2.workspace = true
hex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3.23"
